<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.vsevolod.swipe.addphoto.activity.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@xml/progress"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="100dp">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical">

            <EditText
                android:id="@+id/phone_number"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/rounded_input_shape"
                android:hint="@string/phone_example"
                android:inputType="phone"
                android:imeOptions="actionNext"
                android:maxLines="1"
                android:padding="5dp"
                android:singleLine="true"
                android:textColor="@color/black_overlay" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/rounded_input_shape"
                android:orientation="horizontal"
                android:paddingRight="5dp">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_alignParentLeft="true"
                    android:background="@drawable/rounded_transparent_input_shape"
                    android:hint="@string/password"
                    android:imeActionId="@+id/login"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingLeft="5dp"
                    android:singleLine="true"
                    android:textColor="@color/black_overlay"
                    android:visibility="visible" />

                <ImageButton
                    android:id="@+id/view_password_button"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="5dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/show_password"
                    android:src="@drawable/ic_eye" />
            </RelativeLayout>

            <Button
                android:id="@+id/login_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:background="@drawable/rounded_input_shape"
                android:clickable="true"
                android:contentDescription="@string/enter"
                android:text="@string/enter"
                android:textStyle="bold"
                android:visibility="visible" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
