package com.vsevolod.swipe.addphoto;

import android.support.test.espresso.action.TypeTextAction;
import android.support.test.rule.ActivityTestRule;
import android.support.test.runner.AndroidJUnit4;

import com.vsevolod.swipe.addphoto.activity.LoginActivity;

import org.junit.Rule;
import org.junit.Test;
import org.junit.runner.RunWith;

import static android.support.test.espresso.Espresso.onView;
import static android.support.test.espresso.matcher.ViewMatchers.withId;
import static android.support.test.espresso.action.ViewActions.*;

/**
 * Created by vsevolod on 22.06.17.
 */

@RunWith(AndroidJUnit4.class)
public class FirstTest {

//    @Rule
//    ActivityTestRule<LoginActivity> mLoginActivityActivityTestRule =
//            new ActivityTestRule<LoginActivity>(LoginActivity.class);
//
//    @Test
//    public void login() throws Exception {
//        onView(withId(R.id.phone_number)).perform(typeText("630674650"));
//        onView(withId(R.id.password)).perform(typeText("sevatest"));
//        onView(withId(R.id.login_button)).perform(click());
//    }

}
